# RPG_Rust

./: AlcoQuest_C4.drawio  Cargo.toml  README.md  rapport.md  rapport_lehen.md
assets/: badges.json  roundSaver.json
assets/caracters/: aptitudes.json  arena.json
assets/caracters/pnj/: bouncer.json  clients.json  masters.json  traders.json
assets/sauvegarde/: players.json
save/: player_slot_1.json  player_slot_2.json  player_slot_3.json
src/: badge.rs  main.rs
src/caracter/: bouncer.rs  client.rs  master.rs  player.rs  pnj.rs  trader.rs
src/models/: aptitude.rs  arena.rs  badge.rs  combo.rs  fight.rs  ingredient.rs  recipe.rs  round.rs
src/models/caracter/: bouncer.rs  caracter.rs  client.rs  master.rs  player.rs  pnj.rs  trader.rs
src/services/: JsonLoader.rs  combat_state.rs  displayer.rs  displayer_bevy.rs  game.rs  json_loader.rs  mod.rs
src/services/ui/: aptitudes_screen.rs  combat_screen.rs  constants.rs  game_screen.rs  main_menu.rs  mod.rs  player_creation_screen.rs  player_slot_screen.rs  select_level.rs  start_screen.rs  ui.rs
src/services/ui/game/: components.rs  mod.rs  setup.rs  state.rs
src/services/ui/game/screens/: arena_combat_screen.rs  arena_crafting_screen.rs  arena_end_screen.rs  arena_presentation_screen.rs  arena_selection_screen.rs  bouncer_question_screen.rs  main_screen.rs  mod.rs
src/services/ui/game/systems/: button_handler.rs  mod.rs
