[package]
name = "rpg_rust"
version = "0.1.0"
edition = "2021"

[dependencies]

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
ratatui = "0.29.0"
crossterm = "0.28.1"
bevy = { version = "0.15.3", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
